# particle_visualization

./: #CMakeLists.txt#  #maskState#  #readme.txt#  .#readme.txt  .dropboxignore  .gitignore  .gitignore~  .gitmodules  CMakeLists.txt  CMakePresets.json  DensityEstimator.h  DiskRadius.hpp  HDF5Helpers.h  IsoSurfaceGenerator.cpp  IsoSurfaceGenerator.h  IsoSurfaceGenerator_bak.cpp  LICENSE  Makefile  Makefile~  README.md  THIRD_PARTY_NOTICES.md  compute_2D_histogram.cpp  compute_2D_histogram.h  compute_radial_profile.cpp  compute_radial_profile.h  config (MacBook-Pro-6.local の競合コピー 2025-10-08).txt  config (MacBook-Pro-6.local の競合コピー 2025-11-22).txt  config.txt  config.txt.sample  connectivity_test.cpp  connectivity_test.h  create_convex_hull.cpp  create_convex_hull.h  density_evaluate.cpp  density_evaluate.h  ellipse_fitter.cpp  ellipse_fitter.h  file_io.cpp  file_io_hdf5.cpp  find_clumps.cpp  (+22 more)
build-headless-local/: CMakeCache.txt
docs/: apple-opengl-volume-rendering-notes.md  code-flow-map.md  coordinate-system-notes.md  deferred-work.md  metal-projection-debug-notes.md  particle-lod-debug-notes.md  projection-gpu-backends.md  repo-architecture-assessment.md
example/: download_data.py  download_data.sh
jupyter_work/: shm_reader.py
makefiles/: Template-Makefile
python_assets/: params_client.py  python_bridge_smoke_test.py  shm_particles.py
scripts/: bootstrap_optional_submodules.sh  check_include_boundaries.sh  launch_particle_vis.sh
src/: #main.cpp#  FourierAnalysis.cpp  FourierAnalysis.h  HDF5Helpers.h  RegularGridFieldBuilder.cpp  RegularGridFieldBuilder.h  UI.cpp  UI.h  app_services.h  compute_2D_histogram.cpp  compute_2D_histogram.h  compute_radial_profile.cpp  compute_radial_profile.cpp.bak  compute_radial_profile.h  compute_radial_profile.h.bak  convex_hull_interface.h  field_renderer.cpp  field_renderer.h  imgui_context.cpp  imgui_context.h  interaction_utils.cpp  interaction_utils.h  main.cpp  main.cpp.bak  main.h  make_2D_projection_map.cpp  make_2D_projection_map.h  object.h  object_renderer.cpp  object_renderer.h  particle_label_overlay.cpp  particle_label_overlay.h  particle_renderer.cpp  particle_renderer.h  particle_visual_config.h  projection_preview_gl.cpp  projection_preview_gl.h  quantity.h  render_actions.cpp  render_actions.h  (+15 more)
src/BVH/: BVH.hpp
src/FileIO/: #file_io.cpp#  #file_io.h#  .#file_io.cpp  binary_reader.h  clump_io.cpp  clump_io.h  element_reader.h  file_format_dialog.cpp  file_format_dialog.h  file_format_types.h  file_io.cpp  file_io.h  file_io.h.bak  file_io_hdf5.cpp  file_io_hdf5.cpp.bak  file_layout.h  file_mapping.h  file_mask.h  file_prefetch_state.h  gadget_binary_reader.h  halo_reader.cpp  hdf5_reader.cpp  hdf5_reader.h  hdf5_utils.h  particle_reader.h  prefetch_cache.h  snapshot_extract.cpp  snapshot_extract.h  snapshot_io_service.cpp  snapshot_io_service.h  snapshot_load_params.h  snapshot_loader.cpp  snapshot_loader.h  snapshot_prefetch_controller.cpp  snapshot_prefetch_controller.h  snapshot_read_result.h  snapshot_source.h
src/FindClumps/: clump_chain.cpp  clump_chain.h  clump_chain_types.h  clump_window_state.h  create_convex_hull.cpp  create_convex_hull.h  find_clumps.cpp  find_clumps.h  find_clumps_IO.cpp  find_clumps_IO.h  find_clumps_chain_window.cpp  find_clumps_finder_window.cpp  find_clumps_helpers.h  find_clumps_loaded_window.cpp  find_clumps_make_chains.cpp  find_clumps_ui.h
src/GeometricAnalysis/: DiskRadius.hpp  ellipse_fitter.cpp  ellipse_fitter.h
src/IsoSurface/: IsoSurfaceGenerator.cpp  IsoSurfaceGenerator.h  ParticleOctree.h  connectivity_test.cpp  connectivity_test.h  density_evaluate.cpp  density_evaluate.h  iso_contour_build.cpp  iso_contour_self.cpp  marching_cubes.cpp  marching_cubes.h
src/OctTree/: ParticleOctree.cpp  ParticleOctree.h
src/PythonBridge/: BridgeAdapter.cpp  BridgeAdapter.h  JupyterLauncher.cpp  JupyterLauncher.h  PythonBridge.cpp  PythonBridge.h  PythonBridgeRpcServer.cpp  PythonBridgeRpcServer.h  PythonBridgeSharedMemory.cpp  PythonBridgeSharedMemory.h  README.md  ShmCommon.cpp  ShmCommon.h  ShmLayout.h  ZmqServer.cpp  ZmqServer.h  python_bridge_launcher.cpp  python_bridge_launcher.h
src/StreamLine/: stream_line.cpp  stream_line.h  stream_line_new.cpp  stream_line_new.h
src/UI/: clump_chain_window.cpp  clump_finder_window.cpp  clump_loaded_window.cpp  clump_ui.h  common_ui.cpp  common_ui.h  file_format_dialog.cpp  file_format_dialog.h  settings_ui.cpp  settings_ui.h  tool_window_ui.cpp  tool_window_ui.h  transfer_function_editor.hpp  volume_rendering_ui.cpp  volume_rendering_ui.h
src/VolumeRendering/: #add_sigma.cpp#  OpacityComputer.hpp  TransferFunctionEditor.hpp  TransferFunctionEditor_bak.hpp  tau_sph.cpp  tau_sph.h
src/analysis/: disk_radius.h  ellipse_fitter.cpp  ellipse_fitter.h  histogram2d.cpp  histogram2d.h  power_spectrum.cpp  power_spectrum.h  profile_histogram_export.cpp  profile_histogram_export.h  radial_profile.cpp  radial_profile.h
src/app/: analysis_state.h  app_analysis_dispatch.cpp  app_analysis_dispatch.h  app_analysis_execution.cpp  app_analysis_execution.h  app_callbacks.cpp  app_callbacks.h  app_clump_window_execution.cpp  app_clump_window_execution.h  app_data_actions.cpp  app_data_actions.h  app_derived_rebuild.cpp  app_derived_rebuild.h  app_frame.cpp  app_frame.h  app_input_execution.cpp  app_input_execution.h  app_lifecycle.cpp  app_lifecycle.h  app_projection_execution.cpp  app_projection_execution.h  app_python_bridge_execution.cpp  app_render_sync.cpp  app_render_sync.h  app_services.cpp  app_services.h  app_snapshot_load.cpp  app_snapshot_load.h  app_state.h  app_tool_analysis_execution.cpp  app_tool_clump_execution.cpp  app_tool_filter_execution.cpp  app_tool_halo_execution.cpp  app_tool_particle_execution.cpp  app_tool_projection_execution.cpp  app_tool_window_dispatch.cpp  app_tool_window_dispatch.h  app_tool_window_execution.cpp  app_visibility_actions.cpp  app_visibility_actions.h  (+17 more)
src/config/: app_config.h  config_apply.cpp  config_apply.h  config_data.h  config_extract.cpp  config_extract.h  (+5 more)
tests/: null_backend_smoke.cpp
(+282 files in other folders)
